perf/build: changed aws sdk for java to v2.x