@@ -3,17 +3,18 @@ package br.finax.external;
 import br.finax.enums.ErrorCategory;
 import br.finax.enums.S3FolderPath;
 import br.finax.exceptions.ServiceException;
-import com.amazonaws.SdkClientException;
-import com.amazonaws.auth.AWSStaticCredentialsProvider;
-import com.amazonaws.auth.BasicAWSCredentials;
-import com.amazonaws.regions.Regions;
-import com.amazonaws.services.s3.AmazonS3;
-import com.amazonaws.services.s3.AmazonS3ClientBuilder;
-import com.amazonaws.services.s3.model.S3Object;
-import com.amazonaws.services.s3.model.S3ObjectInputStream;
-import com.amazonaws.util.IOUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
+import software.amazon.awssdk.auth.credentials.AwsBasicCredentials;
+import software.amazon.awssdk.auth.credentials.StaticCredentialsProvider;
+import software.amazon.awssdk.core.exception.SdkClientException;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.regions.Region;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.DeleteObjectRequest;
+import software.amazon.awssdk.services.s3.model.GetObjectRequest;
+import software.amazon.awssdk.services.s3.model.PutObjectRequest;
+import software.amazon.awssdk.services.s3.model.S3Exception;
 
 import java.io.File;
 import java.io.IOException;
@@ -24,14 +25,14 @@ public class AwsS3Service {
 
     private static final String BUCKET = "finax";
 
-    private final AmazonS3 s3Client;
+    private final S3Client s3Client;
 
     public AwsS3Service(@Value("${aws.s3.access-key}") String accessKey, @Value("${aws.s3.secret-key}") String secretKey) {
-        final var awsCreds = new BasicAWSCredentials(accessKey, secretKey);
+        final var awsCreds = AwsBasicCredentials.create(accessKey, secretKey);
 
-        this.s3Client = AmazonS3ClientBuilder.standard()
-                .withRegion(Regions.SA_EAST_1)
-                .withCredentials(new AWSStaticCredentialsProvider(awsCreds))
+        this.s3Client = S3Client.builder()
+                .region(Region.SA_EAST_1)
+                .credentialsProvider(StaticCredentialsProvider.create(awsCreds))
                 .build();
     }
 
@@ -42,25 +43,47 @@ public class AwsS3Service {
         return folderPath + recordId + "_" + unixTimestamp + "." + fileExtension;
     }
 
-    public byte[] getS3File(String filename) throws SdkClientException {
-        final S3Object s3Object = s3Client.getObject(BUCKET, filename);
-        try (S3ObjectInputStream objectInputStream = s3Object.getObjectContent()) {
-            return IOUtils.toByteArray(objectInputStream);
-        } catch (IOException e) {
+    public byte[] getS3File(String filename) throws ServiceException {
+        try {
+            final GetObjectRequest getObjectRequest = GetObjectRequest.builder()
+                    .bucket(BUCKET)
+                    .key(filename)
+                    .build();
+
+            return s3Client.getObject(getObjectRequest).readAllBytes();
+        } catch (S3Exception | SdkClientException | IOException | OutOfMemoryError e) {
             throw new ServiceException(ErrorCategory.INTERNAL_ERROR, "Failed to download file from S3", e);
         }
     }
 
-    public void uploadS3File(String filename, File file) throws SdkClientException {
-        s3Client.putObject(BUCKET, filename, file);
+    public void uploadS3File(String filename, File file) throws ServiceException {
+        try {
+            final PutObjectRequest putObjectRequest = PutObjectRequest.builder()
+                    .bucket(BUCKET)
+                    .key(filename)
+                    .build();
+
+            s3Client.putObject(putObjectRequest, RequestBody.fromFile(file));
+        } catch (S3Exception | SdkClientException e) {
+            throw new ServiceException(ErrorCategory.INTERNAL_ERROR, "Failed to upload file to S3", e);
+        }
     }
 
-    public void updateS3File(String oldFileName, String newFileName, File file) throws SdkClientException {
-        s3Client.deleteObject(BUCKET, oldFileName);
-        s3Client.putObject(BUCKET, newFileName, file);
+    public void updateS3File(String oldFileName, String newFileName, File file) throws ServiceException {
+        deleteS3File(oldFileName);
+        uploadS3File(newFileName, file);
     }
 
     public void deleteS3File(String fileName) {
-        s3Client.deleteObject(BUCKET, fileName);
+        try {
+            DeleteObjectRequest deleteObjectRequest = DeleteObjectRequest.builder()
+                    .bucket(BUCKET)
+                    .key(fileName)
+                    .build();
+
+            s3Client.deleteObject(deleteObjectRequest);
+        } catch (S3Exception | SdkClientException e) {
+            throw new ServiceException(ErrorCategory.INTERNAL_ERROR, "Failed to delete file from S3", e);
+        }
     }
 }
